[project]
name = "deep-mvlm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "torch==1.2.0",
    "vtk==8.1.2",
    "imageio==2.6",
    "matplotlib==3.1.1",
    "scipy==1.3.1",
    "scikit-image==0.15",
    "tensorboard==1.14",
    "absl-py==0.8",
    "protobuf==3.20.3",
    "future==1.0.0",
]
readme = "README.md"
requires-python = "== 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_mvlm"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
