[project]
name = "deep-mvlm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aeon", email = "jerry73204@gmail.com" }
]
dependencies = [
    "torch==1.13.1",
    "vtk==9.4.0",
    "imageio==2.36.1",
    "matplotlib>=3.9.3",
    "scipy==1.14.1",
    "scikit-image==0.24.0",
    "numpy==1.26.4",
    "tensorboard==2.18.0",
]
readme = "README.md"
requires-python = "== 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deep_mvlm"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
